# mizu

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yaml  Dockerfile  Dockerfile.goreleaser  LIVE.md  Makefile  README.md  app.go  app_test.go  app_unix.go  app_unix_test.go  app_windows.go  context.go  context_test.go  docs.go  go.mod  go.work.bak  json_v1.go  json_v2.go  logger.go  logger_test.go  router.go  router_test.go  signals_unix.go  signals_windows.go
blueprints/: README.md  go.mod
blueprints/search/pkg/engine/fineweb/drivers/fts_rust/fts_rust_core/: Cargo.toml  build.rs  cbindgen.toml
blueprints/search/pkg/engine/fineweb/drivers/fts_rust/fts_rust_core/examples/: bench_parquet.rs
blueprints/search/pkg/engine/fineweb/drivers/fts_rust/fts_rust_core/src/: document.rs  ffi.rs  index.rs  lib.rs  result.rs  tokenizer.rs
blueprints/search/pkg/engine/fineweb/drivers/fts_rust/fts_rust_core/src/profiles/: bmw_simd.rs  ensemble.rs  mod.rs  roaring_bm25.rs  seismic.rs  tantivy_profile.rs  turbo.rs  ultra.rs
blueprints/search/tools/clickhouse/: ARCHITECTURE.md  Makefile  README.md  clickhouse-tool.spec  clickhouse_tool_entry.py  pyproject.toml
blueprints/search/tools/clickhouse/src/clickhouse_tool/: browser.py  cli.py  client.py  cloud_api.py  email.py  identity.py  store.py
blueprints/search/tools/clickhouse/tests/: test_client.py  test_cloud_api.py  test_email.py  test_store.py
blueprints/search/tools/cloudflare/: ARCHITECTURE.md  Makefile  README.md  pyproject.toml
blueprints/search/tools/cloudflare/src/cloudflare_tool/: browser.py  cli.py  client.py  email.py  identity.py  store.py  workers.py
blueprints/search/tools/cloudflare/tests/: test_client.py  test_email.py  test_store.py  test_workers.py
blueprints/search/tools/crawler/crawler-cli/: Cargo.toml  build.rs
blueprints/search/tools/crawler/crawler-cli/assets/: dashboard.html
blueprints/search/tools/crawler/crawler-cli/src/: cc.rs  common.rs  display.rs  gui.rs  hn.rs  main.rs  tui.rs
blueprints/search/tools/crawler/crawler-lib/: Cargo.toml
blueprints/search/tools/crawler/crawler-lib/src/: bodystore.rs  config.rs  domain.rs  job.rs  lib.rs  seed.rs  stats.rs  types.rs  ua.rs  warcstore.rs
blueprints/search/tools/crawler/crawler-lib/src/engine/: hyper_engine.rs  mod.rs  reqwest_engine.rs  wreq_engine.rs
blueprints/search/tools/crawler/crawler-lib/src/writer/: binary.rs  devnull.rs  duckdb_writer.rs  mod.rs  parquet_writer.rs
blueprints/search/tools/discord/: Makefile  discord-tool.spec  discord_entry.py  pyproject.toml
blueprints/search/tools/discord/src/discord_tool/: browser.py  cli.py  email.py  identity.py  store.py
blueprints/search/tools/embedder/candle/: Cargo.toml
blueprints/search/tools/embedder/candle/src/: main.rs
blueprints/search/tools/embedder/ort/: Cargo.toml
blueprints/search/tools/embedder/ort/src/: main.rs
blueprints/search/tools/gmail-register/: pyproject.toml
blueprints/search/tools/gmail-register/src/gmail_register/: __init__.py  browser_register.py  cli.py  identity.py  proxy.py  registrar.py  sms.py  store.py
blueprints/search/tools/goodread/: Makefile  goodread-tool.spec  goodread_entry.py  pyproject.toml
blueprints/search/tools/goodread/src/goodread_tool/: browser.py  cli.py  email.py  identity.py  store.py
blueprints/search/tools/motherduck/: .gitignore  ARCHITECTURE.md  Makefile  README.md  motherduck-tool.spec  motherduck_entry.py  pyproject.toml
blueprints/search/tools/motherduck/src/motherduck/: browser.py  cli.py  client.py  email.py  identity.py  store.py
blueprints/search/tools/motherduck/tests/: test_client.py  test_email.py  test_store.py
blueprints/search/tools/protonmail/: Makefile  protonmail-tool.spec  protonmail_entry.py  pyproject.toml
blueprints/search/tools/protonmail/src/protonmail_tool/: browser.py  cli.py  identity.py  store.py
blueprints/search/tools/x-register/: pyproject.toml
blueprints/search/tools/x-register/src/x_register/: __init__.py  browser.py  browser_register.py  captcha.py  cli.py  email.py  email_imap.py  identity.py  proxy.py  registrar.py  store.py  twitter_api.py
blueprints/taocp/: README.md  pyproject.toml
blueprints/taocp/spec/: 0546_taocp.md
blueprints/taocp/src/taocp_converter/: __init__.py  cli.py  converter.py
blueprints/taocp/tests/: test_converter.py
cli/: cmd_contract.go  cmd_dev.go  cmd_middleware.go  cmd_root.go  doctor.go  fs.go  io.go  json.go  middleware_data.go  middleware_data_test.go  new.go  plan.go  root.go  serve.go  templates.go  validate.go  version.go
cmd/: README.md  go.mod  go.sum
contract/: client.go  contract.go  contract_test.go  describe.go  errors.go  helpers.go  introspect.go  middleware.go  openapi.go  schema.go  testing.go  transport.go  transport_jsonrpc.go  transport_mcp.go  transport_rest.go  transport_test.go  transport_trpc.go  types.go
docs/: docs.json
frontend/: cache.go  dev.go  doc.go  frontend.go  inject.go  inject_test.go  manifest_test.go
live/: codec.go  codec_test.go  doc.go  errors.go  live.go  live_test.go  message.go  pubsub.go  pubsub_test.go  server.go  server_test.go  session.go  session_test.go  ws.go  ws_test.go
middlewares/: COVERAGE.md  LINT.md  PLAN_DOCS.md  SPEC.md  TEST.md  doc.go
mobile/: appstore.go  deeplink.go  device.go  doc.go  mobile.go  mobile_test.go  push.go  response.go  sync.go  version.go
spec/: 0001_contract.md  0002_enhance_contract.md  0003_transport.md  0004_transport_mcp_trpc.md  0005_contract_documentation.md  0006_transport_rest.md  0007_contract_cleanup.md  0008_contract_cli.md  0009_contract_docs_cleanup.md  0010_view.md  0011_template_web.md  0012_live.md  0013_live_dx.md  0014_live_protocol.md  0015_template_live.md  0017_sync_live.md  0018_sync_plan.md  0019_sync_live_plan.md  0020_sync_live_test.md  0021_sync_v1.md  0022_sync_v1_impl.md  0023_live_v1.md  0024_live_v1_impl.md  0025_view_sync_v1.md  0026_template_sync_v1.md  0027_view_live_v1.md  0028_template_live_v1.md  0029_refactor_sync.md  0030_refactor_sync_template.md  0031_refactor.live.md  0032_refactor_live_template.md  (+232 more)
(+9018 files in other folders)
