[project]
name = "clickhouse-tool"
version = "0.1.0"
description = "Auto-register ClickHouse Cloud accounts and manage cloud services"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "patchright>=1.50",
    "duckdb>=1.2,<1.5",
    "httpx>=0.27",
    "faker>=33.0",
    "clickhouse-connect>=0.7",
]

[project.scripts]
clickhouse-tool = "clickhouse_tool.cli:app_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clickhouse_tool"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pyinstaller>=6.0",
]
