[project]
name = "discord-tool"
version = "0.1.0"
description = "Auto-register Discord accounts and extract user tokens"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "patchright>=1.50",
    "duckdb>=1.2,<1.5",
    "httpx>=0.27",
    "faker>=33.0",
]

[project.scripts]
discord-tool = "discord_tool.cli:app_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/discord_tool"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]
