[project]
name = "gmail-register"
version = "0.1.0"
description = "Auto-register Gmail accounts using patchright + SMS verification"
requires-python = ">=3.11"
dependencies = [
    "patchright>=1.50",
    "faker>=33.0",
    "httpx>=0.27",
]

[project.scripts]
gmail-register = "gmail_register.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gmail_register"]
