[project]
name = "motherduck"
version = "0.1.0"
description = "Auto-register MotherDuck accounts and manage cloud DuckDB databases"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "patchright>=1.50",
    "duckdb>=1.2",
    "httpx>=0.27",
    "faker>=33.0",
]

[project.scripts]
motherduck = "motherduck.cli:app_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/motherduck"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]
