[project]
name = "x-register"
version = "0.1.0"
description = "Auto-register X (Twitter) accounts using patchright + mail.tm"
requires-python = ">=3.11"
dependencies = [
    "patchright>=1.50",
    "curl-cffi>=0.7",
    "faker>=33.0",
    "httpx>=0.27",
]

[project.scripts]
x-register = "x_register.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/x_register"]
