[package]
name = "embedder-candle"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = "0.5"
tokenizers = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
flate2 = "1"

[features]
default = []
metal = ["candle-core/metal"]
accelerate = ["candle-core/accelerate"]
cuda = ["candle-core/cuda"]

[profile.release]
opt-level = 3
lto = "thin"
