[package]
name = "embedder-ort"
version = "0.1.0"
edition = "2024"

[dependencies]
ort = { version = "=2.0.0-rc.11", features = ["coreml"] }
ndarray = "0.17"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
flate2 = "1"

[profile.release]
opt-level = 3
lto = "thin"
