[package]
name = "fts_rust_core"
version = "0.1.0"
edition = "2021"
authors = ["Mizu Team"]
description = "High-performance full-text search engine with multiple algorithm profiles"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Core search - using tantivy components
tantivy = "0.25"
fst = "0.4"
roaring = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wincode = "0.2"
bincode = "1.3"

# Parallelism
rayon = "1.11"
crossbeam = "0.8"
parking_lot = "0.12"

# Memory management
memmap2 = "0.9"
bumpalo = "3.19"

# SIMD (portable)
wide = "1.1"

# Utilities
thiserror = "2.0"
log = "0.4"
byteorder = "1.5"
num_cpus = "1.17"

# Channels for pipeline
crossbeam-channel = "0.5"

# Profiling (optional)
dhat = { version = "0.3", optional = true }

[features]
default = []
profiling = ["dhat"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true

[dev-dependencies]
tempfile = "3.24"

# cbindgen removed - header maintained manually
